Add field to profile model and view, added medications and profile_medications models

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -15,10 +15,51 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+
+  <div class="field">
+    <%= f.label :gender %><br>
+    <%= f.text_field :gender %>
+  </div>
+
+  <div class="field">
+    <%= f.label :age %><br>
+    <%= f.text_field :age %>
+  </div>
+
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
+
+ <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
+
+ <div class="field">
+    <%= f.label :phonenumber %><br>
+    <%= f.text_field :phonenumber %>
+  </div>
+
+ <div class="field">
+    <%= f.label :contact %><br>
+    <%= f.text_field :contact %>
+  </div>
+
+   <div class="field">
+    <%= f.label :contactnumber %><br>
+    <%= f.text_field :contactnumber %>
+  </div>
+
+   <div class="field">
+    <%= f.label :phonenumber %><br>
+    <%= f.text_field :phonenumber %>
+  </div>
+  
+
+
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
